# User-management

./: .env.test  .gitignore  .pre-commit-config.yaml  alembic.ini  check.py  main.py  pyproject.toml  settings.py
.github/workflows/: blank.yml  test.yml
alembic/: env.py
alembic/versions/: 48f3a0e1803c_create_account_table.py
migrations/: env.py
migrations/versions/: 1a9a16ea419from_column_to_mapped.py  4e1fa335f2cb_init.py  583c9c07d67a_group_can_be_nullable.py  76f1a85db5ec_your_migration_name.py  a6c960e2bf90_upgraded_user_with_password.py  adc6780bbde7_init.py  e550c74872f0_changing_group_relation.py
src/: ch.py  check.py
src/controllers/api_v1/: __init__.py  ctrl_healthcheck.py
src/controllers/api_v1/auth/: __init__.py  auth_error_handler.py  ctrl_login.py  ctrl_refresh_token.py  ctrl_reset_pass.py  ctrl_signup.py
src/controllers/api_v1/user/: __init__.py  ctrl_delete_user_me.py  ctrl_get_filtered_users.py  ctrl_get_user_by_id.py  ctrl_get_user_me.py  ctrl_patch_user_by_id.py  ctrl_patch_user_me.py
src/models/: models.py
src/rabbitmq/: producer.py
src/repositories/: base.py  repo_user.py
src/schemas/: base_model.py  response.py  sch_group.py  sch_user.py
src/services/auth/: auth_service.py  auth_utils.py  svc_login.py  svc_signup.py  user_service.py
src/tests/: conftest.py  factories.py
src/tests/test_controllers/: test_auth.py  test_user.py
src/tests/tests_services/: test_auth_services.py  test_user_service.py
utils/: base.py  db_connection.py  enums.py  logconf.py  permissions.py
