[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["KateM_zz <zupperu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
black = "^23.7.0"
ruff = "^0.0.291"
pre-commit = "^3.4.0"
httpx = "^0.25.1"


[tool.black]
target-version = ['py311']
include = '\.pyi?$'
line-length = 100
exclude = '''
/(
  | migrations
)/
'''

[tool.ruff]
line-length = 100
exclude = [
    "**/migrations/*.py"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
